Fix diplay problem on small screen
Some key CSS and HTML codes are missing, so added them back.
Also fix some small problems.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,9 +13,9 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-    font-family: $default-font-family;
-    font-size: $default-font-size;
-    line-height: $default-line-height;
+    font-family: $base-font-family;
+    font-size: $base-font-size;
+    line-height: $base-line-height;
     font-weight: 300;
     text-align: justify;
     text-justify: inter-ideograph;
@@ -34,14 +34,17 @@ ul, ol, dl, figure,
     margin-bottom: $spacing-unit / 2;
 }
 
+h1, h2, p {
+    margin-top: 1em;
+}
+
 h1 {
-    font-size: $default-font-size * 1.3;
-    font-color: red;
+    font-size: $base-font-size * 1.3;
     font-weight: bold;
 }
 
 h2 {
-    font-size: $default-font-size * 1.1;
+    font-size: $base-font-size * 1.1;
     font-weight: bold;
 }
 
