--- a/css/main.scss
+++ b/css/main.scss
@@ -6,10 +6,10 @@
 
 
 // Our variables
-$default-font-family: Courier, Helvetica, Arial, sans-serif;
-$default-font-size: 16px;
-$small-font-size:  $default-font-size * 0.875;
-$default-line-height: 1.5;
+$base-font-family: Courier, Helvetica, Arial, sans-serif;
+$base-font-size: 16px;
+$small-font-size:  $base-font-size * 0.875;
+$base-line-height: 1.5;
 
 $spacing-unit: 30px;
 
@@ -46,6 +46,6 @@ $on-laptop: 800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-  "default",
-  "layout"
+  	"base",
+  	"layout"
 ;
